{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 90,
  "lineage": "6559ffb2-8b39-fb3a-fb34-b4ea27accacd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:572262081030:internet-gateway/igw-08a549fbcb21ba92e",
            "id": "igw-08a549fbcb21ba92e",
            "owner_id": "572262081030",
            "region": "eu-north-1",
            "vpc_id": "vpc-0a4b5be5b25e81348"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "572262081030",
            "id": "igw-08a549fbcb21ba92e",
            "region": "eu-north-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "genesis_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:572262081030:loadbalancer/app/alb-9b059995/504a347a23b5dfc5",
            "arn_suffix": "app/alb-9b059995/504a347a23b5dfc5",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-9b059995-1298868111.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:572262081030:loadbalancer/app/alb-9b059995/504a347a23b5dfc5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-9b059995",
            "preserve_host_header": false,
            "region": "eu-north-1",
            "security_groups": [
              "sg-091502dd2302f1588"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0568f9175a119abff"
              },
              {
                "subnet_id": "subnet-08fcd79c0448fa3fb"
              }
            ],
            "subnets": [
              "subnet-0568f9175a119abff",
              "subnet-08fcd79c0448fa3fb"
            ],
            "vpc_id": "vpc-0a4b5be5b25e81348",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:572262081030:loadbalancer/app/alb-9b059995/504a347a23b5dfc5"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_internet_gateway_attachment.igw_attach",
            "aws_route.public_default_route",
            "aws_route_table.public_rt",
            "aws_route_table_association.a1",
            "aws_route_table_association.a2",
            "aws_security_group.lb_sg",
            "aws_subnet.s1",
            "aws_subnet.s2",
            "aws_vpc.genesis_vpc",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:572262081030:listener/app/alb-9b059995/504a347a23b5dfc5/42b949a2d2ed7d19",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:572262081030:targetgroup/tg-9b059995/eec6e5066dc1ef7c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:572262081030:listener/app/alb-9b059995/504a347a23b5dfc5/42b949a2d2ed7d19",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:572262081030:loadbalancer/app/alb-9b059995/504a347a23b5dfc5",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-north-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:572262081030:listener/app/alb-9b059995/504a347a23b5dfc5/42b949a2d2ed7d19"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_internet_gateway_attachment.igw_attach",
            "aws_lb.genesis_alb",
            "aws_lb_target_group.tg",
            "aws_route.public_default_route",
            "aws_route_table.public_rt",
            "aws_route_table_association.a1",
            "aws_route_table_association.a2",
            "aws_security_group.lb_sg",
            "aws_subnet.s1",
            "aws_subnet.s2",
            "aws_vpc.genesis_vpc",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:572262081030:targetgroup/tg-9b059995/eec6e5066dc1ef7c",
            "arn_suffix": "targetgroup/tg-9b059995/eec6e5066dc1ef7c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:572262081030:targetgroup/tg-9b059995/eec6e5066dc1ef7c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-north-1:572262081030:loadbalancer/app/alb-9b059995/504a347a23b5dfc5"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-9b059995",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-north-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a4b5be5b25e81348"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:572262081030:targetgroup/tg-9b059995/eec6e5066dc1ef7c"
          },
          "dependencies": [
            "aws_vpc.genesis_vpc",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08a549fbcb21ba92e",
            "id": "r-rtb-0fea74c649c1156591080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-north-1",
            "route_table_id": "rtb-0fea74c649c115659",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "572262081030",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-north-1",
            "route_table_id": "rtb-0fea74c649c115659"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_internet_gateway_attachment.igw_attach",
            "aws_route_table.public_rt",
            "aws_vpc.genesis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:572262081030:route-table/rtb-0fea74c649c115659",
            "id": "rtb-0fea74c649c115659",
            "owner_id": "572262081030",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08a549fbcb21ba92e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a4b5be5b25e81348"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "572262081030",
            "id": "rtb-0fea74c649c115659",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.genesis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a5e8808079730e9",
            "region": "eu-north-1",
            "route_table_id": "rtb-0fea74c649c115659",
            "subnet_id": "subnet-08fcd79c0448fa3fb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "572262081030",
            "id": "rtbassoc-09a5e8808079730e9",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.s1",
            "aws_vpc.genesis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0904a16c931e6fbaf",
            "region": "eu-north-1",
            "route_table_id": "rtb-0fea74c649c115659",
            "subnet_id": "subnet-0568f9175a119abff"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "572262081030",
            "id": "rtbassoc-0904a16c931e6fbaf",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.s2",
            "aws_vpc.genesis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:572262081030:security-group/sg-079f74bb048afad93",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079f74bb048afad93",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-091502dd2302f1588"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "instance-sg",
            "name_prefix": "",
            "owner_id": "572262081030",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a4b5be5b25e81348"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "572262081030",
            "id": "sg-079f74bb048afad93",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_vpc.genesis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:572262081030:security-group/sg-091502dd2302f1588",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091502dd2302f1588",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "AIhelpsg",
            "name_prefix": "",
            "owner_id": "572262081030",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a4b5be5b25e81348"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "572262081030",
            "id": "sg-091502dd2302f1588",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.genesis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "s1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:572262081030:subnet/subnet-08fcd79c0448fa3fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fcd79c0448fa3fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "572262081030",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "vpc_id": "vpc-0a4b5be5b25e81348"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "572262081030",
            "id": "subnet-08fcd79c0448fa3fb",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.genesis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "s2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:572262081030:subnet/subnet-0568f9175a119abff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0568f9175a119abff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "572262081030",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "vpc_id": "vpc-0a4b5be5b25e81348"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "572262081030",
            "id": "subnet-0568f9175a119abff",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.genesis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "genesis_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:572262081030:vpc/vpc-0a4b5be5b25e81348",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09aadbf6f91e348ff",
            "default_route_table_id": "rtb-0bf49930799d36126",
            "default_security_group_id": "sg-0cf3d578e74088c32",
            "dhcp_options_id": "dopt-0cd3e81c12d77a175",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a4b5be5b25e81348",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bf49930799d36126",
            "owner_id": "572262081030",
            "region": "eu-north-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "572262081030",
            "id": "vpc-0a4b5be5b25e81348",
            "region": "eu-north-1"
          }
        }
      ]
    }
  ]
}